# fastapi-bigger-application

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-dev.sh  pyproject.toml  requirements-local.txt  requirements.txt  setup.cfg
.llvm/rules/: guidelines.md
.llvm/workflows/: create-endpoint.md  deployment.md
.windsurf/: service.py
.windsurf/workflows/: create-complete-module.md  create-endpoint.md  database-operations.md  dev-setup.md  testing.md
app/: __init__.py  database.py  dependencies.py  main.py
app/domain/: models.py  service.py
app/domain/buyer/: models.py  service.py
app/domain/car/: models.py  repository.py  schemas.py  service.py
app/domain/sale/: models.py  schemas.py  service.py
app/domain/seller/: models.py  service.py
app/domain/stock/: models.py  repository.py  schemas.py  service.py
app/repository/: crud.py  database.py  models.py  schemas.py
app/resources/: string_formatters.py  strings.py
app/routers/: buyers.py  cars.py  items.py  sales.py  seller.py  sellers.py  stocks.py  users.py
app/src/: config.py  database.py  dependencies.py  security.py
app/src/api/: __init__.py  deps.py
app/src/api/converters/: __init__.py  buyer_converter.py  car_converter.py  sale_converter.py  seller_converter.py  stock_converter.py
app/src/api/v1/: __init__.py  router.py
app/src/api/v1/endpoints/: __init__.py  auth.py  buyers.py  cars.py  health.py  sales.py  sellers.py  stocks.py  users.py
app/src/core/: __init__.py  config.py  conversion.py  database.py  repository.py  security.py
app/src/domain/buyer/: exceptions.py  models.py  repository.py  schemas.py  service.py
app/src/domain/car/: exceptions.py  models.py  repository.py  schemas.py  service.py
app/src/domain/sale/: exceptions.py  models.py  repository.py  schemas.py  service.py
app/src/domain/seller/: exceptions.py  models.py  repository.py  schemas.py  service.py
app/src/domain/stock/: exceptions.py  models.py  repository.py  schemas.py  service.py
app/src/domain/user/: exceptions.py  models.py  repository.py  schemas.py  service.py
app/src/internal/: admin.py
app/src/routers/: api.py  auth.py  buyers.py  cars.py  items.py  sales.py  sellers.py  stocks.py  users.py
app/src/routers/converter/: buyer_converter.py  car_converter.py  sale_converter.py  seller_converter.py
app/src/routers/handlers/: http_error.py
app/test/: base_insertion.py  database_tables.py  database_test.py  database_test_config.py  remove_db_file.py  test_jwt.py
app/test/config/: database_tables.py  database_test_config.py
app/test/templates/: buyer_tempĺates.py  car_tempĺates.py  sale_tempĺates.py  seller_tempĺates.py  stock_tempĺates.py
app/test/test_api/: test_buyers.py  test_cars.py  test_sales.py  test_sellers.py  test_stocks.py
app/tests/: database_test.py
app/tests/test_api/: test_cars.py  test_sellers.py
docs/: clean-code-patterns.md  debitos-tecnicos.md
tests/: base_insertion.py  database_tables.py  database_test.py  test_jwt.py
tests/config/: database_test_config.py
tests/templates/: buyer_tempĺates.py  car_tempĺates.py  sale_tempĺates.py  seller_tempĺates.py  stock_tempĺates.py
tests/test_api/: test_buyers.py  test_cars.py  test_health.py  test_sales.py  test_search_endpoints.py  test_sellers.py  test_stocks.py  test_users.py
